--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,11 @@
          
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+               "node_modules/igniteui-angular/styles/igniteui-angular.css"
               ],
 
-            "scripts": []
+            "scripts":  [ "node_modules/hammerjs/hammer.min.js" ]
           },
           "configurations": {
             "production": {
