--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-image-slider": "0.0.8",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "igniteui-angular": "^7.1.1",
     "ng-material-multilevel-menu": "^4.9.1",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.3",
